@@ -59,3 +59,4 @@ fixme's in UserAOImplTest
 *[#104] Support for optional checksum on transfer
 *[#350] IRODSFIle.exists() when root gets null error
 *[#351] IRODSFIle.getParentFile() should return null when at root
+*[#352] file.listFiles() when root should not list root as child
